--- a/munday-reviews-frontend/src/app/core/components/error-pages/not-found/not-found.component.html
+++ b/munday-reviews-frontend/src/app/core/components/error-pages/not-found/not-found.component.html
@@ -7,7 +7,7 @@
             <button class="btn btn-primary" routerLink="/">
                 Go to Dashboard
             </button>
-            <button class="btn btn-outline" (click)="window.history.back()">
+            <button class="btn btn-outline" (click)="goBack()">
                 Go Back
             </button>
         </div>
